--- a/index.html
+++ b/index.html
@@ -110,6 +110,22 @@
                 <img src="images/devops.png" alt="Kubernetes">
                 <p>Kubernetes</p>
             </div>
+		 <div class="skill">
+                <img src="images/nodejs.png" alt="Docker">
+                <p>Docker</p>
+            </div>
+            <div class="skill">
+                <img src="images/aws.png" alt="Kubernetes">
+                <p>Kubernetes</p>
+            </div>
+		 <div class="skill">
+                <img src="images/jenkins.png" alt="Docker">
+                <p>Docker</p>
+            </div>
+            <div class="skill">
+                <img src="images/restapi.png" alt="Kubernetes">
+                <p>Kubernetes</p>
+            </div>
         </div>
     </div>
 </section>
