--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
 	   <div class="skill">
                 <img src="images/mysql.png" alt="Kubernetes">
-                <p>Kubernetes</p>
+                <p>MySQL</p>
             </div>
 
             <div class="skill">
@@ -108,23 +108,23 @@
             </div>
             <div class="skill">
                 <img src="images/devops.png" alt="Kubernetes">
-                <p>Kubernetes</p>
+                <p>DevOps</p>
             </div>
 		 <div class="skill">
                 <img src="images/nodejs.png" alt="Docker">
-                <p>Docker</p>
+                <p>Nodejs</p>
             </div>
             <div class="skill">
                 <img src="images/aws.png" alt="Kubernetes">
-                <p>Kubernetes</p>
+                <p>AWS</p>
             </div>
 		 <div class="skill">
                 <img src="images/jenkins.png" alt="Docker">
-                <p>Docker</p>
+                <p>Jenkins</p>
             </div>
             <div class="skill">
                 <img src="images/restapi.png" alt="Kubernetes">
-                <p>Kubernetes</p>
+                <p>RestAPI</p>
             </div>
         </div>
     </div>
