--- a/index.html
+++ b/index.html
@@ -46,15 +46,23 @@
         <h2 class="slide-in">About Me</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>
-                    Hello! I'm <strong>Divya Lakshmi Thota</strong>, a passionate Full Stack Developer with over 4 years of experience in building scalable and high-performance web applications. My expertise spans a wide range of technologies, including Java, Spring Boot, Angular, and Kubernetes, which I use to create solutions that solve real-world problems.
-                </p>
-                <p>
-                    I thrive in collaborative, agile environments where I can contribute to innovative projects and learn from like-minded professionals. I am particularly enthusiastic about delivering efficient backend systems, creating intuitive user interfaces, and optimizing database performance.
-                </p>
-                <p>
-                    When I'm not coding, I enjoy exploring the latest tech trends, contributing to open-source projects, and mentoring budding developers. I'm also an advocate for clean, maintainable code and love turning complex problems into elegant solutions.
-                </p>
+               <p>
+    Hi, I’m <strong>Divya Lakshmi Thota</strong> — a builder of thoughtful solutions and seamless digital experiences.
+    With over <strong>four years of experience as a Full Stack Developer</strong>, I transform complex ideas into 
+    reliable, user-friendly systems that make a measurable difference. I focus on creating <strong>efficient, 
+    maintainable, and scalable solutions</strong> that not only solve problems but also enhance the way teams 
+    and users interact with technology.
+</p>
+<p>
+    I thrive in <strong>collaborative environments</strong> where <strong>innovation, continuous learning, and 
+    impact</strong> go hand in hand. Whether improving system performance, enhancing user journeys, or 
+    streamlining delivery cycles, I bring <strong>clarity, creativity, and intent</strong> to everything I do.
+</p>
+<p>
+    When I’m not developing, you’ll find me <strong>exploring new trends</strong>, contributing to the 
+    <strong>developer community</strong>, or <strong>mentoring others</strong> to grow in their tech journey.
+</p>
+
                 <a href="#footer" class="btn">Let's Connect</a>
             </div>
             <div class="about-image">
