--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <p>
             Interested in working together? Download my resume to learn more about my professional experience, skills, and projects.
         </p>
-        <a href="resume.pdf" download class="btn">Download Resume</a>
+        <a href="Divya Lakshmi Thota_GM.pdf" download class="btn">Download Resume</a>
     </div>
 </section>
 
